<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_title_dialog" />

            <EditText
                android:id="@+id/movie_title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status"/>

            <RadioGroup
                android:id="@+id/status_movie_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/status_movie_watching">

                <RadioButton
                    android:id="@+id/status_movie_watching"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status_watching" />

                <RadioButton
                    android:id="@+id/status_movie_watched"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status_watched" />

                <RadioButton
                    android:id="@+id/status_movie_stalled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status_stalled" />

                <RadioButton
                    android:id="@+id/status_movie_dropped"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status_dropped" />

                <RadioButton
                    android:id="@+id/status_movie_want_to_watch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status_want_to_watch" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_duration_dialog"/>

            <com.sakagames.myseriesdatabases.MyTimePicker
                android:id="@+id/movie_duration_time_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/picture_dialog"/>

            <ImageButton
                android:id="@+id/movie_picture_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_image"
                android:onClick="onClickPictureMovie"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>